docs: added links

--- a/migrate/bluesky/v0.6.0.md
+++ b/migrate/bluesky/v0.6.0.md
@@ -6,7 +6,7 @@
 
 ## The return value of `createRecord` and `updateRecord` has been modified to `StrongRef`
 
-See atproto v0.4.0 for details of this fix.
+See [atproto v0.4.0](https://github.com/myConsciousness/atproto.dart/blob/main/migrate/atproto/v0.4.0.md) for details of this fix.
 
 The return type of `createRecord` and `updateRecord` of `RepositoriesService` in the `atproto` package
 has been changed from `Record` to `StrongRef`, and the following methods have been similarly modified.
@@ -26,7 +26,7 @@ has been changed from `Record` to `StrongRef`, and the following methods have be
 
 ## The `BlobContext` and `LegacyBlob` objects have been removed
 
-See atproto v0.4.0 for details of this fix.
+See [atproto v0.4.0](https://github.com/myConsciousness/atproto.dart/blob/main/migrate/atproto/v0.4.0.md) for details of this fix.
 
 The removal of `BlobContext` and `LegacyBlob` in the `atproto` package has been followed by a similar fix in the `bluesky` package.
 
